--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -22,7 +22,7 @@
 
         <link href='https://fonts.googleapis.com/css?family=Economica:400,700' rel='stylesheet' type='text/css'>
 
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR6-Zde0HhCRHP5Hhv2BeKf_Qwp8sAZn4&v=3.exp"></script>
 
 
         <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
